--- a/Beginning/index2.html
+++ b/Beginning/index2.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temeller</title>
-    
+    <title>Document</title>
 </head>
 <body>
-   <h3 id="h3">Javascript'e Giriş</h3>
-
-
-    <script src="app.js"></script>
-    
+    <script src="app2.js"></script>
 </body>
 </html>
