--- a/Beginning/index26.html
+++ b/Beginning/index26.html
@@ -20,7 +20,7 @@
     </div>
     <div class="input-group">
         <div class="input-group-prepend">
-            <span class="input-group-text" id="">Anahtssar</span>
+            <span class="input-group-text" id="">Anahtar</span>
         </div>
         <input type="text" id = "deletekey" class="form-control">
 
